--- a/esorics/main.tex
+++ b/esorics/main.tex
@@ -59,18 +59,26 @@
 
   \title{ OCDN: Oblivious Content Delivery Networks}
   
-  \author{} 
-  \institute{}
-
-  %\subtitle{...}
+  \author{Anne Edmundson \and
+Paul Schmitt \and
+Nick Feamster \and
+Jennifer Rexford}
+%
+\authorrunning{A. Edmundson et al.}
+% First names are abbreviated in the running head.
+% If there are more than two authors, 'et al.' is used.
+%
+\institute{Princeton University, Princeton NJ \\
+\email{\{annee,pschmitt,feamster,jrex\}@cs.princeton.edu}}
 
  
 
   %\keywords{privacy, content delivery networks}
 
- 
 
 \maketitle
+ 
+\vspace{-5mm}
 \input{abstract}
 \input{intro}
 \input{background}
