--- a/esorics/performance.tex
+++ b/esorics/performance.tex
@@ -1,12 +1,35 @@
-
-
 \section{Performance Evaluation}
 \label{sec:performance}
 We evaluate the performance 
-of \system{} for latency and overhead. For measuring performance characteristics of \system{}, we use the implementation 
+of \system{} for latency and overhead using the implementation 
 described in Section \ref{sec:implementation}.  Figure \ref{fig:impl} shows 
 how our measurements reflect \system{} (solid line) and a traditional CDN (dotted 
 line).  
+
+\begin{figure}[t!]
+%\vspace{-2mm}
+  \begin{minipage}[t]{.31\linewidth}
+    \centering
+     \includegraphics[trim={10 15 10 12},clip,width=\textwidth]{combined}
+    \caption{Time to first byte and time to complete a request with and without \system{}.}
+    \label{fig:completion}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[t]{.29\linewidth}
+    \centering
+    \includegraphics[trim={7 0 10 5},clip,width=\textwidth]{Latency_withoutzero_2}
+    %\vspace{-10mm}
+    \caption{Time to first byte and time to complete a request with varying the file size and latency.}%; this latency corresponds to $\alpha$ in Figure \ref{fig:impl}.}
+    \label{fig:latency}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[t]{.35\linewidth}
+    \centering
+    \includegraphics[trim={7 8 7 7},clip,width=\textwidth]{loggrouped_2}
+\caption{Overhead of different operations performed by \system{}.}
+\label{fig:overhead2}
+  \end{minipage}
+\end{figure}
 
 Figure~\ref{fig:completion} shows the time to first byte (TTFB).  We can see the the TTFB using \system{} increases linearly with
 file size, whereas without \system{} TTFB remains fairly constant.  We can see that there are some fixed-time operations that \system{} performs, which
