--- a/esorics/security.tex
+++ b/esorics/security.tex
@@ -1,9 +1,9 @@
 \section{Attacks Against \system{}}
 \label{sec:sec}
 
-We analyze and discuss how \system{} defends against different attacks.  Table 
+We discuss how \system{} defends against various attacks.  Table 
 \ref{tab:sec_table}
-shows what security and privacy features \system{} provides in comparison to other related 
+shows the security and privacy features \system{} provides in comparison to related 
 systems.
 
 \begin{table}[t!]
@@ -24,27 +24,20 @@ systems.
 \caption{The security and privacy features offered by related systems.  To our knowledge, 
 \system{} is the first to address confidentiality at the CDN.}
 \label{tab:sec_table}
+\vspace{-5mm}
 \end{table}
 
-\textbf{Popularity Attacks.}  An attacker who has gained access to CDN cache logs can learn information about how often 
-content was requested.  Because not all content is requested uniformly, the 
-attacker could potentially correlate the most commonly requested content with 
-very popular webpages.  While this does not allow the CDN to learn which 
-clients are accessing the content, it can reveal information about what content 
-is stored on the CDN cache nodes.  \system{} handles this type of attacker by making 
-the distribution of content requests appear uniform.  The content publisher (of popular 
-content) generates multiple encodings of their content and URLs, and encrypts each one 
+\textbf{Popularity Attacks.}  An attacker who has gained access to CDN logs can learn information about content popularity.  Because not all content is requested uniformly, the attacker could potentially correlate the most commonly requested content with 
+very popular websites.  While this does not allow the CDN to learn client identity, it can reveal information about what content 
+is stored on the CDN cache nodes. \system{} handles this type of attacker by making 
+the distribution of content requests appear uniform.  The content publisher generates multiple encodings of their content and URLs, and encrypts each one 
 with the shared key $k$, such that they have multiple, different-looking 
-copies of their content.  All of the content copies are pushed to the CDN and the key is 
-shared with the exit proxy.\footnote{This also provides load balancing for exit proxies 
-that hold the shared key $k$ for the popular webpage because it distributes the load
-across multiple exit proxies (where each of these exit proxies are responsible for 
-one of the encodings).}  %Now, the popular content does not appear as popular, 
+copies of their content.  All of the content copies are pushed to the CDN and the key is shared with the exit proxy.\footnote{This also provides load balancing for exit proxies that hold the shared key $k$ for the popular webpage because it distributes the load across multiple exit proxies.}  %Now, the popular content does not appear as popular, 
 %and it makes it difficult for an attacker to infer the popularity of the content.
 
 \textbf{Chosen Plaintext Attacks.} An attacker can attempt to
 determine whether a particular URL was being accessed by sending requests
-through specific \system{} proxies and requesting access to the CDN cache logs, 
+through specific \system{} proxies and requesting access to the CDN logs, 
 which contain the corresponding obfuscated
 requests and responses. Blinding the clients' requests
 with a random nonce that is added by the proxy prevents against this
@@ -55,35 +48,33 @@ attack. %We also believe that such an attack reflects a stronger attack: from a
 
 \textbf{Traffic Analysis Attacks.} If a CDN itself is malicious and is attempting 
 to learn information about the content and/or clients, the CDN may act as a client 
-in the system.  In this attack the (malicious) client sends a request for content 
+in the system. In this attack the (malicious) client sends a request for content 
 and the CDN can correlate the request with a content access at the CDN because they have 
 knowledge of both the CDN logs and the requests they are making as a client.  \system{} 
 defends against this by using the exit proxies as {\it natural} mixes; each exit proxy is receiving 
 different requests from different clients and then forwarding the requests on to the CDN.  
 These exit proxies naturally mix the requests enough that the CDN cannot conduct traffic analysis
- and determine which request corresponds to which content on the CDN's cache nodes.\footnote{For clarification, the exit proxies 
-are not a type of mixnet~\cite{chaum1981untraceable}, they are simply receiving requests and then forwarding them, and due to the variety of 
-requests, they provide natural mixing characteristics.}  There has 
-also been numerous studies that have proposed and evaluated defenses against traffic 
-analysis attacks~\cite{wright2009traffic,rackoff1993cryptographic}; \system{} could implement one of these solutions (such as slight timing delays) at the exit 
+ and determine which request corresponds to which content on the CDN's cache nodes.
+ %\footnote{For clarification, the exit proxies are not a type of mixnet~\cite{chaum1981untraceable}, they are simply receiving requests and then forwarding them, and due to the variety of requests, they provide natural mixing characteristics.}
+There has also been numerous studies that have proposed and evaluated defenses against traffic analysis attacks~\cite{wright2009traffic,rackoff1993cryptographic}; \system{} could implement one of these solutions (such as slight timing delays) at the exit 
 proxy.
 
 \textbf{Spoofed Content Updates.} Because the CDN does not know either the content that it is hosting or the URLs
 corresponding to the content, an attacker could masquerade as an origin server
-and could potentially push bogus content for a URL to a cache node. There are
+and push bogus content for a URL to a cache node. There are
 a number of defenses against this possible attack. The simplest solution is
 for CDN cache nodes to authenticate origin servers and only accept updates
-from trusted origins; this approach is plausible, since many origin servers already
-have a corresponding public key certificate through the web PKI hierarchy.  %An additional
+from trusted origins.%; this approach is plausible, since many origin servers already
+%have a corresponding public key certificate through the web PKI hierarchy.  %An additional
 %defense is to make it difficult for an attacker to discover which obfuscated URLs correspond
 %to which content that an attacker wishes to spoof; this is achievable by design.
 %A third defense would be to only accept updates for content from the same origin
 %server that populated the cache with the original content.
 
-\textbf{Timing Attacks.} An attacker who is passively observing traffic could potentially 
-correlate requests and responses based on timing information.  To address this type of attack, 
-\system{} could employ techniques used in previous research, such as implementing timing 
-delays, at different exit proxies.
+%\textbf{Timing Attacks.} An attacker who is passively observing traffic could potentially 
+%correlate requests and responses based on timing information.  To address this type of attack, 
+%\system{} could employ techniques used in previous research, such as implementing timing 
+%delays, at different exit proxies.
 
 \textbf{Sybil Attacks.} An adversary who runs {\it many} exit proxies can learn information 
 about many clients and many content requests as they are responsible for encrypting/decrypting 
@@ -92,13 +83,8 @@ context~\cite{geambasu2009experiences,wolchok2010defeating}.  \system{} can empl
 of a Sybil attack.  To limit the number of exit proxies running on a single machine, \system{} can 
 limit the number of exit proxies with the same IP address (which is a part of the exit proxy's self-certifying 
 identifier) to one; therefore, the attack becomes more 
-expensive as the number of machines the adversary must control increases.\footnote{Note also that this 
-countermeasure prevents two or more exit proxies from being behind the same NAT.}  This defense can be 
-expanded to entire network prefixes; for example, if a large (malicious) organization owns an entire prefix, 
-they could launch a Sybil attack using various IP addresses within their network.  \system{} could 
-limit the number of IP addresses in a given prefix to either one (which may result in a smaller set of 
-exit proxies) or some small number (in which case the size of the Sybil is extremely small and cannot achieve 
-its goal of being in a certain location on the hashing ring).  
+expensive as the number of machines the adversary must control increases. This defense can be expanded to entire network prefixes; for example, if a large (malicious) organization owns an entire prefix.  \system{} could 
+limit the number of IP addresses in a given prefix to either one (which may result in a smaller set of exit proxies) or some small number (in which case the size of the Sybil is extremely small.  
 
 \textbf{Flashcrowds.}  A flashcrowd is a large spike in traffic to a specific web
 page. An attacker
@@ -106,4 +92,4 @@ could see that some content on the CDN has just seen a surge in traffic and corr
 other information (for example, major world events).  This leaks information about what content the 
 CDN is caching.  Fortunately, the design of \system{} can defend against this type of inference attack.  
 The exit proxy can cache content in the time of a flashcrowd, such that the CDN (and therefore the attacker) 
-does not see the surge in traffic.\footnote{This raises billing issues because the CDN can’t charge as much if edge servers don’t see as many requests for the origin; fortunately, RFC 2227 describes a solution for this~\cite{rfc2227}.}  
+does not see the surge in traffic.\footnote{This raises billing issues because the CDN can’t charge as much if edge servers don’t see as many requests; fortunately, RFC 2227 describes a solution for this~\cite{rfc2227}.}  
