--- a/esorics/intro.tex
+++ b/esorics/intro.tex
@@ -26,7 +26,7 @@ retrieve web objects from one or more CDNs, while preventing the CDNs from
 learning (1)~the content that is stored on the cache nodes; (2)~the content
 that clients request; and (3)~the identity of clients that request it. We call this design an {\em oblivious CDN}~(\system{}).%, because the CDN is oblivious to both the content it is storing and the content that clients request.
 
-\system{} allows clients to request objects with identifiers that is not known to any of the CDN cache nodes. To do so, the origin server publishes encrypted content, 
+\system{} allows clients to request objects with identifiers that is not known to the CDN. To do so, the origin server publishes encrypted content, 
 which the CDN cache nodes subsequently serve through one or more exit proxies that are responsible for routing requests for objects corresponding to that URL. A client forwards a request for content through OCDN exit proxies such that the CDN is unable to know either the client identity or the requested content. Using \system{} requires only minimal modification to existing clients; clients can also configure aspects of the system to trade off performance for privacy.
 
 Ensuring that the CDN operator never learns information about either (1)~what
@@ -75,20 +75,20 @@ as a client, exit proxy, or publisher.
 %design also can also use consistent hashing to assign a set of proxes to a
 %single object. 
 
-The rest of this paper is structured as follows. We provide a brief background
-of CDNs, privacy implications, and legal questions in
-Section~\ref{sec:background}. We discuss the threat model in
-Section~\ref{sec:threat}. In Section~\ref{sec:design}, we detail the design of
-\system{}. We describe our process for obfuscating requests and content in
-Section~\ref{sec:protocol}.  
-Section~\ref{sec:implementation} describes our prototype implementation. Section~
-\ref{sec:sec} analyzes how \system{}
-defends against threats from our adversary. Section~\ref{sec:performance}
-studies the performance implications of the tradeoffs between performance and
-privacy, as well as how \system{} performs relative to a conventional CDN.
-Section~\ref{sec:discussion} describes various limitations and possible
-avenues for future work, Section~\ref{sec:related} discusses related work, and
-Section~\ref{sec:conclusion} concludes. \paul{Perhaps cut this paragraph for space.}
+%The rest of this paper is structured as follows: We provide a brief background
+%of CDNs, privacy implications, and legal questions in
+%Section~\ref{sec:background}. We discuss the threat model in
+%Section~\ref{sec:threat}. In Section~\ref{sec:design}, we detail the design of
+%\system{}. We describe our process for obfuscating requests and content in
+%Section~\ref{sec:protocol}.  
+%Section~\ref{sec:implementation} describes our prototype implementation. Section~
+%\ref{sec:sec} analyzes how \system{}
+%defends against threats from our adversary. Section~\ref{sec:performance}
+%studies the performance implications of the tradeoffs between performance and
+%privacy, as well as how \system{} performs relative to a conventional CDN.
+%%Section~\ref{sec:discussion} describes various limitations, 
+%Section~\ref{sec:related} discusses related work, and
+%Section~\ref{sec:conclusion} concludes. 
 
 
 %\system{} allows clients to request individual objects with identifiers that
